terraform/k8s/k8s/k8s/k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progree-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: progree.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: progree-service
                port:
                  number: 80
